--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,3 +7,11 @@ img {
     bottom: 0;
     right: 150px
 }
+
+page-home{
+    background-color: rgb(56, 56, 170) !important;
+}
+
+.scroll-content{
+    overflow-y: hidden !important;
+}
