--- a/src/pages/camera/camera.scss
+++ b/src/pages/camera/camera.scss
@@ -5,3 +5,17 @@ page-camera {
 .scroll-content{
     overflow-y: hidden !important;
 }
+
+.range-tick{
+    height: 6px !important;
+}
+.range{
+    width: 80% !important;
+}
+.ion-block{
+    align-items: left !important;
+}
+.item {
+    position: fixed;
+    bottom: 0;
+}
