--- a/src/pages/camera/camera.scss
+++ b/src/pages/camera/camera.scss
@@ -46,11 +46,41 @@ page-camera {
         height: 0;
       }
 }
-
+/* 
 svg{
     position: absolute;
     left:0;
+} */
+
+svg {
+    height: 30%;
+    width: 50%;
+    margin-top: 25%;
 }
+
+.bounce-anim {
+    animation: bounce 1s alternate infinite;
+}
+
+@keyframes bounce {
+    from { margin-top: 25%; }
+    to   { margin-top: 28%; }
+}
+
+// start buttton
+
+.start-wrapper {
+    position: fixed;
+    width: 100%
+}
+
+.start-btn {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+
 
 .classy{
     margin: auto;
