--- a/src/pages/camera/camera.scss
+++ b/src/pages/camera/camera.scss
@@ -4,82 +4,87 @@ page-camera {
 
 .scroll-content{
     overflow-y: hidden !important;
-    text-align: center;
+    text-align: -webkit-center;
 }
 
-/* 
-svg{
+// SVG DEVIL
+.devil {
     position: absolute;
-    left:0;
-} */
-
-svg {
-    height: 30%;
-    width: 50%;
-    margin-top: 25%;
+    height: 40px;
+    bottom: 0;
+    width: 20px;
+    left: 137px;
+    animation: devil-move 1s forwards;
 }
 
-.bounce-anim {
-    animation: bounce 1s alternate infinite;
+@keyframes devil-move {
+    0% {
+        bottom:0;
+        width:20px;
+        height: 40px;
+        left: 137px;
+        transform: rotate(0deg);
+    }
+    100%{
+        bottom: -20px;
+        width: 160px;
+        height: 130px;
+        left: 270px;
+        transform: rotate(-30deg);
+    }
+}
+//ion-icon
+.handycam-redo{
+    width: 40px;
+    height: 70px;
+    display: inline-block;
+    font-size: 15vh;
+    position: absolute;
+    bottom: 30px;
+    left: 300px;
+    animation: icon-move 1s forwards;
 }
 
-.bounce-in {
-    animation: animate-down .7s, fade-in .7s; 
+@keyframes icon-move {
+    0% {
+        opacity: 0;
+        left: 147px;
+    }
+    100% {
+        opacity: 1;
+        left: 15px
+    }
 }
 
-.no-anim {
-    animation: none;
-}
+// countdown
 
-@keyframes fade-in {
-    0% { opacity: 0; }   
-  100%   { opacity: 1; } 
-}
-
-input{
-  background-color: rgba(255,255,255,1)!important;
-}
-input::-webkit-input-placeholder { padding-left:10px; }
-input::-webkit-input-placeholder { padding-left:10px; }
-input::-webkit-input-placeholder { padding-left:10px; }
-  
-a{
-  font-size:1.2rem;
-} 
-
-@keyframes animate-down{
-  0% {
-    transform: translateY(-200px); 
-    animation-timing-function: cubic-bezier(.200, 1, .355, 1.6);
-  }
-  
-  100% {
-    transform: translateY(0px);
-    animation-timing-function: cubic-bezier(.55, .055, .675, .1);
-  }
-}
-
-@keyframes bounce {
-    from { margin-top: 25%; }
-    to   { margin-top: 28%; }
-}
-
-// start buttton
-
-/* .start-wrapper {
+.countdown {
+    font-size: 15vh;
     position: fixed;
-    width: 100%
+    top: 25%;
+    width: 100%;
+    text-align: -webkit-center;
+    
 }
 
-.start-btn {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;       
+    }
+
 }
- */
+
+// countdown animation that yaboiHARDCODED 
+.countdown3  { height: 30%; width: 50%; margin-top: -40%; opacity: 0; animation: appear 1s ease-in; animation-delay: 1s;}
+.countdown2  { height: 30%; width: 50%; margin-top: -40%; opacity: 0; animation: appear 1s ease-in; animation-delay: 2s;}
+.countdown1  { height: 30%; width: 50%; margin-top: -40%; opacity: 0; animation: appear 1s ease-in; animation-delay: 3s;}
+.countdownGO  { height: 30%; width: 50%; margin-top: -40%; opacity: 0; animation: appear 1s ease-in; animation-delay: 4s;}
 
 
+// hitbox enters
 @keyframes statsEnter{
     from {
         opacity: 0;
@@ -92,7 +97,7 @@ a{
         height: 100px;
       }
 }
-
+// hitbox leaves
 @keyframes statsExit{
     from {
         opacity: 1;
@@ -106,28 +111,160 @@ a{
       }
 }
 
-
+// hitbox active
 .classy{
-    margin: auto;
     position: absolute;
-    background: white;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    background: black;
+    color: white;
+    top: 20%;
+    width: 200px;
+    left: 50%;
+    margin-left: -100px;
+    border-radius: 20px;
     animation: statsEnter 2s;
     animation-fill-mode: forwards;
 }
-
+// hitbox not active
 .unclassy{
-    margin: auto;
     position: absolute;
-    background:white;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    background: white;
+    top: 20%;
+    width: 200px;
+    left: 50%;
+    margin-left: -100px;
+    border: green 2px solid;
+    border-radius: 20px;
     animation: statsExit 2s;
     animation-fill-mode: forwards;
 }
 
+
+// start button     
+.start-game {
+    opacity: 1;
+    top: 75%;
+    border: 3px white solid;
+    border-radius: 50%;
+    background: transparent;
+    padding: 20px; 
+    width: 100px;
+    height: 100px; 
+    position: relative;
+    animation: drop-in 1s forwards;
+}
+
+@keyframes drop-in {
+    0% {
+        opacity: 0;
+        top: 40%;
+    }
+    100% {
+        opacity: 1;
+        top: 80%;
+    }
+}
+
+
+// clipboard results
+.clipboard-text-container {
+    position: absolute;
+    bottom: 900px;
+    font-size: 40px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    width: 100%;
+    animation: text-move 3s forwards;
+    animation-delay: 3s;
+}
+
+@keyframes text-move {
+    0% {
+        bottom: 900px;
+    }
+    100% {
+        bottom: 25%;
+    }
+}
+
+#clipboard-img {
+    position: absolute;
+    bottom: 900px;
+    left: 20px;
+}
+
+.clipboard-in {
+    animation: clipboard-enter 4s forwards;
+
+}
+
+.clipboard-out {
+    animation: clipboard-enter 4s reverse;
+}
+
+@keyframes clipboard-enter {
+    0% {
+        bottom: 900px;
+    }
+    100% {
+        bottom: 10px;
+    }
+}
+
+
+
+// pulsing redo button on clipboard
+.pulse-button {
+    position: absolute;
+    bottom: -80px;
+    left: 25%;
+    margin-left: -40px;
+    margin-top: -50px;
+    display: block;
+    width: 70px;
+    height: 70px;
+    font-size: 24px;
+    font-weight: light;
+    font-family: 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 100px;
+    letter-spacing: -1px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    background: #5a99d4;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 rgba(#5a99d4, .5);
+    -webkit-animation: pulse 1.5s infinite;
+  }
+  .pulse-button:hover {
+    -webkit-animation: none;
+  }
+  
+  @-webkit-keyframes pulse {
+    0% {
+      @include transform(scale(.9));
+    }
+    70% {
+      @include transform(scale(1));
+      box-shadow: 0 0 0 20px rgba(#5a99d4, 0);
+    }
+      100% {
+      @include transform(scale(.9));
+      box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
+    }
+  }
+
+.svg-thumb{
+    font-size: 22px;
+    margin-top: 30px;
+    animation: spinningLoader 1.5s infinite;
+}
+
+@keyframes spinningLoader {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(720deg);
+    }
+}
